speedtest-tracker/speedtest-tracker-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker-db-svc
  namespace: speedtest-tracker
  labels:
    app: speedtest-tracker-db
    role: database
spec:
  type: ClusterIP
  selector:
    app: speedtest-tracker-db
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
